fix : project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dice-frontend",
+  "name": "jobscore-frontend-renewal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
