--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@mui/system": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
     "async-mutex": "^0.4.0",
+    "dayjs": "^1.11.9",
+    "firebase": "^10.1.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
