--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "redux-persist": "^6.0.0"
@@ -35,6 +36,7 @@
     "@types/node": "^20.2.6",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-lottie": "^1.2.6",
     "@types/react-redux": "^7.1.25",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
