--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^10.1.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-redux": "^8.0.7",
