--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-redux": "^8.0.7",
