--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
+    "dev": "vite --port 3000 --mode development",
+    "start": "vite --port 3000 --mode production",
+    "test": "vite --port 3000 --mode test",
     "build": "tsc && vite build",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
     "lint": "eslint --fix \"src/**/*.{ts,tsx,js,jsx}\"",
