--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --port 3000 --mode development",
     "start": "vite --port 3000 --mode production",
     "test": "vite --port 3000 --mode test",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --mode development",
+    "build:dev": "tsc && vite build",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
     "lint": "eslint --fix \"src/**/*.{ts,tsx,js,jsx}\"",
     "preview": "vite preview",
