--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "prettier": "^2.8.8",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-pwa": "^0.21.1"
   }
 }
